[CHANGES] seperated css [ADDED] start button

--- a/Snake.js/snake.html
+++ b/Snake.js/snake.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8">
     <title>Snake</title>
     <script src="snake.js"></script>
-    <style>
-        canvas {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 400px;
-            height: 400px;
-            align-self: center;
-            background-color: black;
-            border: 3px solid green;
-            padding: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="snake.css">
 </head>
 <body>
-<canvas id="battlefield">
-</canvas>
+<canvas id="battlefield"></canvas>
+<button id="start">Start</button>
 </body>
 </html>
+
