[FIXED] trail: snake length upon re-spawn [CHANGES] UI fix: css/html

--- a/Snake.js/snake.html
+++ b/Snake.js/snake.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="snake.css">
 </head>
 <body>
-<canvas id="battlefield"></canvas>
-<button id="start">Start</button>
+<canvas id="battlefield" height="400px" width="400px"></canvas>
+<button id="start">START</button>
 <script src="snake.js"></script>
 </body>
 </html>
